--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ h2 {
 
 select {
   display: block;
-  width: 100px;
+  width: 100%;
   font-size: 18px;
   border-radius: 4px;
   padding: 10px;
@@ -24,13 +24,16 @@ select {
 .container {
   max-width: 600px;
   margin: 60px auto;
-  background-color: white;
+  background: white;
   padding: 30px;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
 }
 
 .city {
   display: flex;
+  margin: 10px 0;
+  padding: 30px;
   justify-content: space-between;
   border-bottom: 1px dashed grey rgba(0, 0, 0, 0.2);
 }
@@ -38,6 +41,7 @@ select {
 .city:last-child {
   border: none;
 }
+
 .date {
   opacity: 0.7;
 }
