--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,11 @@
 body {
   background-color: #f9f7fe;
-  font-family: sans-serif;
+  font-family: "Roboto Slab", serif;
+  background-image: url("clock-image.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  opacity: 0.78;
 }
 
 h1 {
@@ -10,7 +15,7 @@ h1 {
 
 h2 {
   margin: 0 0 5px;
-  font-size: 28px;
+  font-size: 32px;
 }
 
 select {
@@ -60,5 +65,6 @@ select {
 footer {
   text-align: center;
   font-size: 18px;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(8, 8, 8, 0.918);
+  background-color: rgb(224, 220, 220);
 }
